# ProjMajster

./: LICENSE  ProjMajster.cabal  README.md  stack.yaml
src/: Main.hs
