name:                ProjMajster
version:             0
-- synopsis:
-- description:
homepage:            https://github.com/mykopan/ProjMajster#readme
license:             BSD3
license-file:        LICENSE
author:              Mykola Panasyuk
maintainer:          kolia.panasiuk@me.com
copyright:           2017 Mykola Panasyuk
category:            Development
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable bas
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -Wno-missing-signatures -O2
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , extra
                     , filepath
                     , process
